--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,110 +1,112 @@
-<div class="blur padding">
-  <form (ngSubmit)="search()">
-    <div class="form-group">
-      <div class="d-flex">
-        <input
-          class="textbar display-6"
-          style="width: 450px"
-          type="text"
-          id="searchLocation"
-          placeholder="Enter location..."
-          [formControl]="searchFormControl"
-          [ngbTypeahead]="autoComplete"
-          [resultFormatter]="formatter"
-          [inputFormatter]="formatter"
-          [editable]="false"
-          (selectItem)="onSelect($event)"
-        />
-        <button type="submit" class="btn btn-lg bi-search px-4"></button>
-      </div>
-    </div>
-  </form>
-  <hr />
-  <div class="heading">Past Locations</div>
-  <div class="d-flex flex-row">
-    <ng-container
-      *ngFor="
-        let previousLocation of localStorageService.mostRecentLocalStorage
-          | async;
-        index as i
-      "
+<div
+  class="d-flex flex-column justify-content-start p-3 min-vh-100 mw-100 bg-black bg-opacity-10"
+>
+  <section class="border-bottom min-vh-10 pb-1 min-vh-lg-15 pb-lg-1">
+    <form (ngSubmit)="search()">
+      <input
+        class="w-100 border-bottom"
+        type="text"
+        id="searchLocation"
+        placeholder="Enter location..."
+        [formControl]="searchFormControl"
+        [ngbTypeahead]="autoComplete"
+        [resultFormatter]="formatter"
+        [inputFormatter]="formatter"
+        [editable]="false"
+        (selectItem)="onSelect($event)"
+      />
+    </form>
+    <h6 class="pt-2 text-shadow">Past Locations</h6>
+    <div
+      class="d-flex flex-row justify-content-between justify-content-lg-start"
     >
-      <button
-        type="button"
-        class="pill-button"
-        (click)="researchLocation(previousLocation)"
-      >
-        {{ previousLocation ? (previousLocation.city | titlecase) : "" }}
-      </button>
-    </ng-container>
-  </div>
-  <hr />
-  <div class="heading">Weather Details</div>
-  <div class="row">
-    <div class="box">
-      <p class="upper-text">
-        {{
-          (weatherStateService.mostRecentWeather | async)?.current?.sunrise
-            | date : "shortTime"
-        }}
-      </p>
-      <p class="lower-text">Sunrise</p>
+      <ng-container
+        *ngFor="
+          let previousLocation of localStorageService.mostRecentLocalStorage
+            | async;
+          index as i
+        "
+        ><div class="pe-lg-2">
+          <button
+            type="button"
+            class="btn btn-info px-2 py-1 rounded-pill shadow"
+            (click)="researchLocation(previousLocation)"
+          >
+            {{ previousLocation ? (previousLocation.city | titlecase) : "" }}
+          </button>
+        </div>
+      </ng-container>
     </div>
-    <div class="box">
-      <p class="upper-text">
-        {{
-          (weatherStateService.mostRecentWeather | async)?.current?.sunset
-            | date : "shortTime"
-        }}
-      </p>
-      <p class="lower-text">Sunset</p>
-    </div>
-    <div class="box">
-      <p class="upper-text">
-        {{
-          tempUnit === "f"
-            ? ((weatherStateService.mostRecentWeather | async)?.current
-                ?.feelsLike | number : "1.0-0")
-            : (((weatherStateService.mostRecentWeather | async)?.current
-                ?.feelsLike! -
-                32) *
-                (5 / 9) | number : "1.0-0")
-        }}
-        <span *ngIf="(weatherStateService.mostRecentWeather | async)?.current">
-          °</span
-        >
-      </p>
+  </section>
 
-      <p class="lower-text">Feels Like</p>
-    </div>
-    <div class="box">
-      <p class="upper-text">
-        {{ (weatherStateService.mostRecentWeather | async)?.current?.humidity
-        }}<span
-          *ngIf="(weatherStateService.mostRecentWeather | async)?.current"
-        >
-          %</span
-        >
-      </p>
-      <p class="lower-text">Humidity</p>
-    </div>
-    <div class="box">
-      <p class="upper-text">
-        {{
-          (weatherStateService.mostRecentWeather | async)?.current?.windSpeed
-            | number : "1.0-0"
-        }}<span
-          *ngIf="(weatherStateService.mostRecentWeather | async)?.current"
-        >
-          mph</span
-        >
-      </p>
-      <p class="lower-text">Wind</p>
-    </div>
-  </div>
-  <hr />
-  <div class="heading">Next 5 days</div>
-  <div>
+  <section class="border-bottom min-vh-10">
+    <h6 class="pt-2 text-shadow">Weather Details</h6>
+    <article class="d-flex flex-row justify-content-around">
+      <div class="d-flex flex-column p-1 w-1/5 text-center">
+        <p class="text-shadow">
+          {{
+            (weatherStateService.mostRecentWeather | async)?.current?.sunrise
+              | date : "shortTime"
+          }}
+        </p>
+        <small class="text-shadow">Sunrise</small>
+      </div>
+      <div class="d-flex flex-column p-1 w-1/5 text-center">
+        <p class="text-shadow">
+          {{
+            (weatherStateService.mostRecentWeather | async)?.current?.sunset
+              | date : "shortTime"
+          }}
+        </p>
+        <small class="text-shadow">Sunset</small>
+      </div>
+      <div class="d-flex flex-column p-1 w-1/5 text-center">
+        <p class="text-shadow">
+          {{
+            tempUnit === "f"
+              ? ((weatherStateService.mostRecentWeather | async)?.current
+                  ?.feelsLike | number : "1.0-0")
+              : (((weatherStateService.mostRecentWeather | async)?.current
+                  ?.feelsLike! -
+                  32) *
+                  (5 / 9) | number : "1.0-0")
+          }}
+          <span
+            *ngIf="(weatherStateService.mostRecentWeather | async)?.current"
+          >
+            °</span
+          >
+        </p>
+        <small class="text-shadow">Feels Like</small>
+      </div>
+      <div class="d-flex flex-column p-1 w-1/5 text-center">
+        <p class="text-shadow">
+          {{ (weatherStateService.mostRecentWeather | async)?.current?.humidity
+          }}<span
+            *ngIf="(weatherStateService.mostRecentWeather | async)?.current"
+          >
+            %</span
+          >
+        </p>
+        <small class="text-shadow">Humidity</small>
+      </div>
+      <div class="d-flex flex-column p-1 w-1/5 text-center">
+        <p class="text-shadow">
+          {{
+            (weatherStateService.mostRecentWeather | async)?.current?.windSpeed
+              | number : "1.0-0"
+          }}<span
+            *ngIf="(weatherStateService.mostRecentWeather | async)?.current"
+          >
+            mph</span
+          >
+        </p>
+        <small class="text-shadow">Wind</small>
+      </div>
+    </article>
+  </section>
+  <section class="min-vh-65">
+    <h6 class="pt-2 text-shadow">Next 5 days</h6>
     <ng-container
       *ngFor="
         let weather of (weatherStateService.mostRecentWeather | async)?.daily;
@@ -116,5 +118,5 @@
         [tempUnit]="tempUnit"
       ></app-weather-data-daily>
     </ng-container>
-  </div>
+  </section>
 </div>
